# nestodo

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  _AGENTS.md  angular.json  compose.prod.yml  compose.yml  docker-compose.yml  karma.conf.js  package-lock.json  package.json  pyproject.toml
.agents/: github-command-reference.md  github-operations.md  github-rules.md
.claude/: settings.json
.claude/skills/config-improver/: SKILL.md
.claude/skills/github-operations/: SKILL.md
.claude/skills/project-structure/: SKILL.md
.claude/skills/spec-impl-checker/: SKILL.md
.codex/: codex-guidelines.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: feature.yml
.github/PULL_REQUEST_TEMPLATE/: code.md  spec-split.md  spec.md
.github/workflows/: wiki-sync.yml
.kiro/hooks/: sync-spec-dropdown.kiro.hook
.kiro/settings/: mcp.json
.kiro/steering/: development-rules.md  github-operations.md  spec-clarify-from-issue.md  spec-completion.md  spec-split.md  spec-update-from-approved-issue.md  spec-update-from-issue.md
.tmp/: 要件定義書_オリジナル.md  追加要望の雑記.md
app/: __init__.py  api.py  db.py  errors.py  main.py  models.py  repositories.py  schemas.py  services.py
docker/: backend-prod.Dockerfile  backend-test.Dockerfile  backend.Dockerfile  frontend-prod.Dockerfile  frontend-test.Dockerfile  frontend.Dockerfile
docs/: CONTRIBUTING.md  requirements-spec.md  spec-index.md
src/: index.html  main.ts  styles.css
src/app/: app.routes.ts
src/app/menu/: menu.model.ts  (+6 more)
tests/: conftest.py  test_filter_service.py  test_task_service.py
(+106 files in other folders)
