[project]
name = "nestodo"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.30.0",
  "sqlalchemy[asyncio]>=2.0.30",
  "asyncpg>=0.29.0",
  "pydantic>=2.7.0",
]

[project.optional-dependencies]
test = [
  "aiosqlite>=0.20.0",
  "httpx>=0.27.0",
  "mypy>=2.1.0",
  "pytest>=8.2.0",
  "pytest-asyncio>=0.23.0",
  "ruff>=0.8.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.mypy]
python_version = "3.13"
strict = true
plugins = ["pydantic.mypy"]
